--- a/docs/前言.md
+++ b/docs/前言.md
@@ -7,7 +7,7 @@
 
 然而，当前的生态中存在一个明显的断层：一方面是层出不穷的 Agent 框架和应用，令人眼花缭乱；另一方面，却是系统性知识的极度匮乏。大多数教程聚焦于某个特定框架的 API 调用，学习者往往“知其然，而不知其所以然”，在面对复杂需求时，依然感到力不从心。我们缺少一本能够穿透框架表象，从第一性原理出发，系统讲解智能体设计、构建与协作的实战指南。
 
-鉴于此，我们发起了这个名为hl-mas的开源项目。本书的目标，是授人以渔。我们不仅会带你领略智能体领域最前沿的技术，更会引导你深入其核心架构，理解其经典范式，并最终亲手构建起属于自己的、强大的多智能体应用。我们相信，最好的学习方式就是动手实践。
+鉴于此，我们发起了这个名为Hello-Agents的开源项目。本书的目标，是授人以渔。我们不仅会带你领略智能体领域最前沿的技术，更会引导你深入其核心架构，理解其经典范式，并最终亲手构建起属于自己的、强大的多智能体应用。我们相信，最好的学习方式就是动手实践。
 
 希望这本书能成为你探索智能体浩瀚世界的起点，帮助你从一名 LLM 的“使用者”，蜕变为一名智能系统的“构建者”。让我们一起，迎接正在到来的智能革命。
 
