update readme & setting in course

--- a/docs/前言.md
+++ b/docs/前言.md
@@ -3,7 +3,7 @@
 
 答案，就是 智能体（Agent）。
 
-如果说2024年是“百模大战”的元年，那么2025年无疑开启了“Agent元年”。我们看到，技术的焦点正从训练更大、更强的基础模型，转向如何构建更聪明、更高效的智能体应用。单个智能体已经能胜任特定领域的任务，而由多个智能体分工、协作、甚至辩论，共同完成一个宏大目标的多智能体系统（Multi-Agent System），则被视为释放 LLM 全部潜能、解决真实世界复杂问题的关键钥匙。
+如果说2024年是“百模大战”的元年，那么2025年无疑开启了“Agent元年”。我们看到，技术的焦点正从训练更大、更强的基础模型，转向如何构建更聪明、更高效的智能体应用。单个智能体已经能胜任特定领域的任务，而由多个智能体分工、协作、甚至辩论，共同完成一个宏大目标的多智能体系统（Multi-Agent System, MAS），则被视为释放 LLM 全部潜能、解决真实世界复杂问题的关键钥匙。
 
 然而，当前的生态中存在一个明显的断层：一方面是层出不穷的 Agent 框架和应用，令人眼花缭乱；另一方面，却是系统性知识的极度匮乏。大多数教程聚焦于某个特定框架的 API 调用，学习者往往“知其然，而不知其所以然”，在面对复杂需求时，依然感到力不从心。我们缺少一本能够穿透框架表象，从第一性原理出发，系统讲解智能体设计、构建与协作的实战指南。
 
@@ -23,7 +23,7 @@
 
 对大语言模型有基本的概念性了解（例如，知道如何获取LLM的API）。
 
-无需具备深厚的算法或模型训练背景，本书的重点是应用与构建。
+请放心，你无需具备深厚的算法或模型训练背景，本书的重点是应用与构建。
 
 本书的内容被精心划分为五个部分，构成了一条平滑的学习曲线：
 
@@ -35,9 +35,9 @@
 
 第四部分（实战篇）： 这是本书的核心价值所在。你将通过一系列精心设计的综合项目（如智能旅行助手、自动化研究智能体等），将所学知识融会贯通，在实战中淬炼真金。
 
-第五部分（展望篇）： 我们将一同探讨多智能体系统的伦理、安全与未来，并完成一个毕业设计，为你的学习之旅画上一个圆满的句号。
+第五部分（展望篇）： 旅程的终点是新的起点。你将亲手打造属于你的“毕业作品”，为你的学习之旅画上一个圆满的句号。
 
-为了获得最佳的学习效果，我们强烈建议你将理论与实践相结合。智能体是一个飞速发展且极度依赖实践的领域。请务必亲手运行、调试甚至修改本书提供的每一份代码。更重要的是，我们鼓励你举一反三，尝试将所学技术应用到自己感兴趣的场景中。
+纸上得来终觉浅，绝知此事要躬行。智能体是一个高度依赖实践的领域，因此我们强烈建议你亲手运行、调试、甚至重构本书提供的每一份代码。更重要的是，我们鼓励你举一反三，将所学技术应用到自己感兴趣的真实场景中，这才是学习的最终目的。
 
 最后，作为一个开源项目，我们热忱欢迎你的参与和贡献。当你遇到问题时，可以在我们的社区中提问；当你有了新的想法或发现时，也欢迎你随时加入到项目的共建中来。
 
