--- a/docs/前言.md
+++ b/docs/前言.md
@@ -9,7 +9,7 @@
 
 鉴于此，我们发起了这个名为Hello-Agents的开源项目。本书的目标，是授人以渔。我们不仅会带你领略智能体领域最前沿的技术，更会引导你深入其核心架构，理解其经典范式，并最终亲手构建起属于自己的多智能体应用。我们相信，最好的学习方式就是动手实践。
 
-希望这本书能成为你探索智能体浩瀚世界的起点，帮助你从一名 LLM 的“使用者”，蜕变为一名智能系统的“构建者”。让我们一起，迎接正在到来的智能革命。
+希望这本书能成为你探索智能体浩瀚世界的起点，帮助你从一名 LLM 的“使用者”，蜕变为一名智能体系统的“构建者”。让我们一起，迎接正在到来的智能革命。
 
 ## 写给读者的建议
 
@@ -31,9 +31,9 @@
 
 第二部分（单体篇）： 这是你动手实践的开始。我们将带你从零开始，构建一个功能完备的单体智能，深入理解其内部的“心智”结构。
 
-第三部分（高级篇）： 在这里，你的智能体将“学会”思考（CoT）、拥有记忆和工具（RAG），并掌握智能体之间的通信协议，最终进化为多智能体系统。
+第三部分（高级篇）： 在这里，你的智能体将“学会”思考（CoT）、拥有记忆和工具（RAG），并掌握智能体之间的通信协议，最终完成评估的闭环。
 
-第四部分（实战篇）： 这是本书的核心价值所在。你将通过一系列精心设计的综合项目（如智能旅行助手、自动化研究智能体等），将所学知识融会贯通，在实战中淬炼真金。
+第四部分（实战篇）： 这是本书的核心价值所在。你将通过一系列精心设计的综合项目（如智能旅行助手、赛博小镇等），将所学知识融会贯通，在实战中淬炼真金。
 
 第五部分（展望篇）： 旅程的终点是新的起点。你将亲手打造属于你的“毕业作品”，为你的学习之旅画上一个圆满的句号。
 
