--- a/docs/前言.md
+++ b/docs/前言.md
@@ -31,7 +31,7 @@
 
 第二部分（单体篇）： 这是你动手实践的开始。我们将带你从零开始，构建一个功能完备的单体智能，深入理解其内部的“心智”结构。
 
-第三部分（高级篇）： 在这里，你的智能体将“学会”思考（CoT）、拥有记忆和工具（RAG），并掌握智能体之间的通信协议，最终完成评估的闭环。
+第三部分（高级篇）： 在这里，你的智能体将“学会”思考、拥有记忆和工具，并掌握智能体之间的通信协议，最终完成评估的闭环。
 
 第四部分（实战篇）： 这是本书的核心价值所在。你将通过一系列精心设计的综合项目（如智能旅行助手、赛博小镇等），将所学知识融会贯通，在实战中淬炼真金。
 
