--- a/docs/前言.md
+++ b/docs/前言.md
@@ -9,7 +9,7 @@
 
 鉴于此，我们发起了这个名为Hello-Agents的开源项目。本书的目标，是授人以渔。我们不仅会带你领略智能体领域最前沿的技术，更会引导你深入其核心架构，理解其经典范式，并最终亲手构建起属于自己的多智能体应用。我们相信，最好的学习方式就是动手实践。
 
-希望这本书能成为你探索智能体浩瀚世界的起点，帮助你从一名 LLM 的“使用者”，蜕变为一名智能体系统的“构建者”。让我们一起，迎接正在到来的智能革命。
+希望这本教程能成为你探索智能体浩瀚世界的起点，帮助你从一名 LLM 的“使用者”，蜕变为一名智能体系统的“构建者”。让我们一起，迎接正在到来的智能革命。
 
 ## 写给读者的建议
 
