--- a/docs/前言.md
+++ b/docs/前言.md
@@ -33,7 +33,7 @@
 
 第三部分（高级篇）： 在这里，你的智能体将“学会”思考、拥有记忆和工具，并掌握智能体之间的通信协议，最终完成评估的闭环。
 
-第四部分（实战篇）： 这是本书的核心价值所在。你将通过一系列精心设计的综合项目（如智能旅行助手、赛博小镇等），将所学知识融会贯通，在实战中淬炼真金。
+第四部分（实战篇）： 这是本书的核心价值所在。你将通过一系列精心设计的综合项目，将所学知识融会贯通，在实战中淬炼真金。
 
 第五部分（展望篇）： 旅程的终点是新的起点。你将亲手打造属于你的“毕业作品”，为你的学习之旅画上一个圆满的句号。
 
