--- a/docs/前言.md
+++ b/docs/前言.md
@@ -7,25 +7,23 @@
 
 然而，当前的生态中存在一个明显的断层：一方面是层出不穷的 Agent 框架和应用，令人眼花缭乱；另一方面，却是系统性知识的极度匮乏。大多数教程聚焦于某个特定框架的 API 调用，学习者往往“知其然，而不知其所以然”，在面对复杂需求时，依然感到力不从心。我们缺少一本能够穿透框架表象，从第一性原理出发，系统讲解智能体设计、构建与协作的实战指南。
 
-鉴于此，我们发起了这个名为Hello-Agents的开源项目。本书的目标，是授人以渔。我们不仅会带你领略智能体领域最前沿的技术，更会引导你深入其核心架构，理解其经典范式，并最终亲手构建起属于自己的多智能体应用。我们相信，最好的学习方式就是动手实践。
+鉴于此，我们发起了 Hello-Agents 项目，希望能为社区提供一本从零开始、理论与实战并重的智能体系统构建指南。我们不仅会带你领略智能体领域最前沿的技术，更会引导你深入其核心架构，理解其经典范式，并最终亲手构建起属于自己的多智能体应用。
 
-希望这本教程能成为你探索智能体浩瀚世界的起点，帮助你从一名 LLM 的“使用者”，蜕变为一名智能体系统的“构建者”。让我们一起，迎接正在到来的智能革命。
+我们相信，最好的学习方式就是动手实践。希望这本教程能成为你探索智能体世界的起点，能够从一名大语言模型的"使用者"，蜕变为一名智能体系统的"构建者"。
 
 ## 写给读者的建议
 
 欢迎你，未来的智能系统构建者！在开启这段激动人心的旅程之前，请允许我们给你一些小小的建议。
 
-本书内容兼顾理论与实战，旨在帮助你系统性地掌握从单个智能体到多智能体系统的设计与开发全流程。因此，本书尤其适合有一定编程基础的 AI开发者、软件工程师、在校学生 以及对前沿 AI 技术抱有浓厚兴趣的自学者。
+在阅读项目之前，我们希望你：
 
-在阅读本书之前，我们希望你：
+- 具备基础的 Python 编程能力。
 
-具备扎实的 Python 编程能力。
+- 对大语言模型有基本的概念性了解（例如，知道如何获取LLM的API）。
 
-对大语言模型有基本的概念性了解（例如，知道如何获取LLM的API）。
+- 请放心，你无需具备深厚的算法或模型训练背景，项目的重点是应用与构建。
 
-请放心，你无需具备深厚的算法或模型训练背景，本书的重点是应用与构建。
-
-本书的内容被精心划分为五个部分，构成了一条平滑的学习曲线：
+本项目分为五部分，覆盖基础到实战，循序渐进，层层相扣：
 
 第一部分（基础篇）： 我们将为你铺垫人工智能与 LLM 的核心知识，让你对智能体的诞生背景有宏观的认识。
 
@@ -33,12 +31,12 @@
 
 第三部分（高级篇）： 在这里，你的智能体将“学会”思考、拥有记忆和工具，并掌握智能体之间的通信协议，最终完成评估的闭环。
 
-第四部分（实战篇）： 这是本书的核心价值所在。你将通过一系列精心设计的综合项目，将所学知识融会贯通，在实战中淬炼真金。
+第四部分（实战篇）： 这是项目的核心价值所在。你将通过一系列精心设计的综合案例，将所学知识融会贯通，在实战中淬炼真金。
 
 第五部分（展望篇）： 旅程的终点是新的起点。你将亲手打造属于你的“毕业作品”，为你的学习之旅画上一个圆满的句号。
 
-纸上得来终觉浅，绝知此事要躬行。智能体是一个高度依赖实践的领域，因此我们强烈建议你亲手运行、调试、甚至重构本书提供的每一份代码。更重要的是，我们鼓励你举一反三，将所学技术应用到自己感兴趣的真实场景中，这才是学习的最终目的。
+纸上得来终觉浅，绝知此事要躬行。为了获得最佳的学习效果，我们在项目的`code`文件夹内提供了配套的全部代码，强烈建议你将理论与实践相结合。请务必亲手运行、调试甚至修改项目里提供的每一份代码。我们鼓励你举一反三，将所学技术应用到自己感兴趣的真实场景中，这才是学习的最终目的。
 
 最后，作为一个开源项目，我们热忱欢迎你的参与和贡献。当你遇到问题时，可以在我们的社区中提问；当你有了新的想法或发现时，也欢迎你随时加入到项目的共建中来。
 
-感谢你选择本书，祝你学习愉快，探索无限！
+感谢你选择阅读Hello-agents，祝你学习愉快，探索无限！
