--- a/06.第六章-框架开发实践.md
+++ b/06.第六章-框架开发实践.md
@@ -30,9 +30,11 @@
 
 在本章的后续实战中，我们将聚焦于四个在这些前沿领域极具代表性的框架：AutoGen、AgentScope、CAMEL 和 LangGraph。它们的设计理念各不相同，分别代表了实现复杂智能体系统的不同技术路径，如表6.1所示。
 
-<div align="center">
-  <img src="images/6-01.png" alt="" width="90%"/>
-</div>
+
+
+![图片](images/6-01.png)
+
+
 
 
 - <strong>AutoGen</strong>：AutoGen 的核心思想是通过对话实现协作<sup>[1]</sup>。它将多智能体系统抽象为一个由多个“可对话”智能体组成的群聊。开发者可以定义不同角色（如 `Coder`, `ProductManager`, `Tester`），并设定它们之间的交互规则（例如，`Coder` 写完代码后由 `Tester` 自动接管）。任务的解决过程，就是这些智能体在群聊中通过自动化消息传递，不断对话、协作、迭代直至最终目标达成的过程。
@@ -50,10 +52,11 @@
 
 `0.7.4` 版本的发布是 AutoGen 发展的一个重要节点，它标志着框架在底层设计上的一次根本性革新。这次更新并非简单的功能叠加，而是对整体架构的重新思考，旨在提升框架的模块化、并发性能和开发者体验。
 
-<div align="center">
-  <img src="images/6-02.png" alt="" width="90%"/>
-  <p>图 6.1 AutoGen架构图</p>
-</div>
+
+
+![图 6.1 AutoGen架构图](images/6-02.png)
+
+
 
 （1）框架结构的演进
 
@@ -406,10 +409,11 @@ model_client = OpenAIChatCompletionClient(
 
 如图6.2所示，AgentScope 采用了清晰的分层模块化设计，从底层的基础组件到上层的应用编排，形成了一个完整的智能体开发生态。
 
-<div align="center">
-  <img src="images/6-03.png" alt="" width="90%"/>
-  <p>图 6.2 AgentScope架构图</p>
-</div>
+
+
+![图 6.2 AgentScope架构图](images/6-03.png)
+
+
 
 在这个架构中，最底层是<strong>基础组件层 (Foundational Components)</strong>，它为整个框架提供了核心的构建块。`Message` 组件定义了统一的消息格式，支持从简单的文本交互到复杂的多模态内容；`Memory` 组件提供了短期和长期记忆管理；`Model API` 层抽象了对不同大语言模型的调用；而 `Tool` 组件则封装了智能体与外部世界交互的能力。
 
@@ -730,10 +734,11 @@ CAMEL 实现自主协作的基石是两大核心概念：<strong>角色扮演 (R
 
 这些约束条件确保了对话不会偏离主题、不会陷入无效循环，而是以一种高度结构化、任务驱动的方式向前推进，如图6.3所示。
 
-<div align="center">
-  <img src="images/6-04.png" alt="" width="90%"/>
-  <p>图 6.3 CAMEL创建股票机器人交易</p>
-</div>
+
+
+![图 6.3 CAMEL创建股票机器人交易](images/6-04.png)
+
+
 
 在下一节，我们将通过一个具体的实例来体验这一过程。
 
