--- a/07.第七章-构建你的Agent框架.md
+++ b/07.第七章-构建你的Agent框架.md
@@ -446,9 +446,11 @@ for chunk in llm.think(messages):
 
 相比于4.1.3节的基础实现，现在的HelloAgentsLLM具有以下显著优势：
 
-<div align="center">
-  <img src="images/table-01.png" alt="" width="90%"/>
-</div>
+
+
+![图片](images/table-01.png)
+
+
 
 如上表7.1所示，这种演进体现了框架设计的重要原则：**从简单开始，逐步完善**。我们在保持接口简洁的同时，增强了功能的完整性。
 
@@ -1273,9 +1275,11 @@ print(f"数学专用Agent结果: {math_result}")
 
 如表7.2所示，通过这种框架化的重构，我们不仅保持了第四章中各种Agent范式的核心功能，还大幅提升了代码的组织性、可维护性和扩展性。所有Agent现在都共享统一的基础架构，同时保持了各自的特色和优势。
 
-<div align="center">
-  <img src="images/table-02.png" alt="" width="90%"/>
-</div>
+
+
+![图片](images/table-02.png)
+
+
 
 ### 7.4.5 FunctionCallAgent
 
@@ -1652,10 +1656,11 @@ if __name__ == "__main__":
 
 通过这个简化的数学计算工具案例，我们学会了如何快速开发自定义工具：编写一个简单的计算函数，通过ToolRegistry注册，然后与SimpleAgent集成使用。为了更直观的观察，这里提供了图7.1，可以清晰理解代码的运行逻辑。
 
-<div align="center">
-  <img src="images/01.png" alt="" width="90%"/>
-  <p>图 7.1 基于Helloagents的SimpleAgent运行工作流</p>
-</div>
+
+
+![图 7.1 基于Helloagents的SimpleAgent运行工作流](images/01.png)
+
+
 
 ### 7.5.3 多源搜索工具
 
