--- a/16.第十六章-毕业设计.md
+++ b/16.第十六章-毕业设计.md
@@ -143,10 +143,11 @@ jupyter lab
 2. 点击右上角的"Fork"按钮，如图 16.1 红色方框位置
 3. 选择你的 GitHub 账号，创建 Fork
 
-<div align="center">
-  <img src="images/16-1.png" alt="" width="85%"/>
-  <p>图 16.1 Fork 仓库步骤</p>
-</div>
+
+
+![图 16.1 Fork 仓库步骤](images/16-1.png)
+
+
 
 <strong>步骤 2：克隆到本地</strong>
 
@@ -164,10 +165,11 @@ git remote add upstream https://github.com/datawhalechina/hello-agents.git
 git remote -v
 ```
 
-<div align="center">
-  <img src="images/16-2.png" alt="" width="85%"/>
-  <p>图 16.2 克隆仓库到本地</p>
-</div>
+
+
+![图 16.2 克隆仓库到本地](images/16-2.png)
+
+
 
 <strong>步骤 3：创建开发分支</strong>
 
@@ -624,10 +626,11 @@ git push origin feature/你的项目名称
 2. 点击"Pull requests"标签，如图 16.3 所示
 3. 点击"New pull request"按钮
 
-<div align="center">
-  <img src="images/16-3.png" alt="" width="85%"/>
-  <p>图 16.3 创建 Pull Request</p>
-</div>
+
+
+![图 16.3 创建 Pull Request](images/16-3.png)
+
+
 
 
 <strong>步骤 2：选择分支</strong>
@@ -698,10 +701,11 @@ git push origin feature/你的项目名称
 
 如图 16.4 所示，点击"Create pull request"按钮提交。
 
-<div align="center">
-  <img src="images/16-4.png" alt="" width="85%"/>
-  <p>图 16.4 提交 Pull Request</p>
-</div>
+
+
+![图 16.4 提交 Pull Request](images/16-4.png)
+
+
 
 
 
