--- a/02.第二章-智能体发展史.md
+++ b/02.第二章-智能体发展史.md
@@ -2,10 +2,11 @@
 
 为了深刻理解现代智能体为何呈现出如今的形态，以及其核心设计思想的由来，本章将回溯历史：从人工智能领域的古典时代出发，探寻最早的“智能”如何在逻辑与符号的规则体系中被定义；继而见证从单一、集中的智能模型到分布式、协作式智能思想的重大转折；最终理解“学习”范式如何彻底改变了智能体获取能力的方式，并催生出我们今天所见的现代智能体。
 
-<div align="center">
-  <img src="images/1757246501849-00.png" alt="图片描述" width="90%"/>
-  <p>图 2.1 AI智能体的演进阶梯</p>
-</div>
+
+
+![图 2.1 AI智能体的演进阶梯](images/1757246501849-00.png)
+
+
 
 如图2.1所示，<strong>每一个新范式的出现，都是为了解决上一代范式的核心“痛点”或根本局限。</strong> 而新的解决方案在带来能力飞跃的同时，也引入了新的、在当时难以克服的“局限”，而这又为下一代范式的诞生埋下了伏笔。理解这一“问题驱动”的迭代历程，能帮助我们更深刻地把握现代智能体技术选型背后的深层原因与历史必然性。
 
@@ -26,10 +27,11 @@
 
 这里的物理符号系统指的是一个能够在物理世界中存在的系统，它由一组可被区分的符号和一系列对这些符号进行操作的过程组成，其构成元素如图2.2所示。这些符号可以组合成更复杂的结构（例如表达式），而过程则可以创建、修改、复制和销毁这些符号结构。
 
-<div align="center">
-  <img src="images/1757246501849-0.png" alt="图片描述" width="90%"/>
-  <p>图 2.2 物理符号系统的构成元素</p>
-</div>
+
+
+![图 2.2 物理符号系统的构成元素](images/1757246501849-0.png)
+
+
 
 简而言之，PSSH大胆地宣称：<strong>智能的本质，就是符号的计算与处理。</strong>
 
@@ -41,10 +43,11 @@
 
 一个典型的专家系统通常由知识库、推理机、用户界面等几个核心部分构成，其通用架构如图2.3所示。
 
-<div align="center">
-  <img src="images/1757246501849-1.png" alt="图片描述" width="90%"/>
-  <p>图 2.3 专家系统的通用架构</p>
-</div>
+
+
+![图 2.3 专家系统的通用架构](images/1757246501849-1.png)
+
+
 
 
 这种架构清晰地体现了知识与推理相分离的设计思想，是符号主义AI的重要特征。
@@ -64,10 +67,11 @@ MYCIN是历史上最著名、最具影响力的专家系统之一，由斯坦福
 
 - <strong>工作原理</strong>：MYCIN通过与医生进行问答式交互来收集病人的症状、病史和化验结果。其知识库包含了约600条由医学专家提供的“IF-THEN”规则。推理机主要采用反向链的方式工作：从“确定致病菌”这一最高目标出发，反向推导需要哪些证据和条件，然后向医生提问以获取这些信息。其简化的工作流程如图2.4所示。
 
-<div align="center">
-  <img src="images/1757246501849-2.png" alt="图片描述" width="90%"/>
-  <p>图 2.4 MYCIN反向链推理流程示意图</p>
-</div>
+
+
+![图 2.4 MYCIN反向链推理流程示意图](images/1757246501849-2.png)
+
+
 
 - <strong>不确定性处理</strong>：医学诊断充满了不确定性。MYCIN的一个重要创新是引入了<strong>置信因子（Certainty Factor, CF）</strong>的概念，用一个-1到1之间的数值来表示一个结论的可信度。这使得系统能够处理不确定的、模糊的医学知识，并给出带有可信度评估的诊断结果，这比简单的布尔逻辑更贴近现实世界。
 - <strong>成就与意义</strong>：在一项评估中，MYCIN在血液感染诊断方面的表现超过了非专业医生，甚至达到了人类专家的水平。它的成功雄辩地证明了物理符号系统假说的有效性：通过精心的知识工程和符号推理，机器确实可以在高度复杂的专业领域展现出卓越的“智能”。MYCIN不仅是专家系统发展史上的一个里程碑，也为后续人工智能在各个垂直领域的商业化应用铺平了道路。
@@ -76,10 +80,11 @@ MYCIN是历史上最著名、最具影响力的专家系统之一，由斯坦福
 
 如果说专家系统展示了符号AI在专业领域的“深度”，那么由<strong>特里·威诺格拉德（Terry Winograd）</strong>于1968-1970年开发的SHRDLU项目<sup>[3]</sup>，则在“广度”上实现了革命性的突破。如图2.5所示，SHRDLU旨在构建一个能在“积木世界”这一微观环境中，通过自然语言与人类流畅交互的综合性智能体。“积木世界”是一个模拟的三维虚拟空间，其中包含不同形状、颜色和大小的积木，以及一个可以抓取和移动它们的虚拟机械臂。用户通过自然语言向SHRDLU下达指令或提问，SHRDLU则在虚拟世界中执行动作或给出文字回答。
 
-<div align="center">
-  <img src="images/1757246501849-3.png" alt="图片描述" width="90%"/>
-  <p>图 2.5 SHRDLU的“积木世界”交互界面</p>
-</div>
+
+
+![图 2.5 SHRDLU的“积木世界”交互界面](images/1757246501849-3.png)
+
+
 
 SHRDLU在当时引起广泛关注，主要原因在于它首次将多个独立的人工智能模块（如语言解析、规划、记忆）集成在一个统一的系统中，并使它们协同工作：
 
@@ -320,10 +325,11 @@ ELIZA的实践清晰地揭示了符号主义方法的核心矛盾：系统看似
 
 在这个过程中，没有任何一个智能体或机构拥有整个任务的全局规划。`GRASP`只负责抓握，它不知道什么是塔；`BUILDER`只负责循环，它不知道如何控制手臂。然而，当这个由无数“无心”的智能体组成的社会，通过简单的激活和抑制规则相互作用时，一个看似高度智能的行为，搭建积木塔，就自然而然地涌现了出来。
 
-<div align="center">
-  <img src="images/1757246501849-4.png" alt="图片描述" width="90%"/>
-  <p>图 2.6 “心智社会”中搭建积木塔行为的涌现机制示意图</p>
-</div>
+
+
+![图 2.6 “心智社会”中搭建积木塔行为的涌现机制示意图](images/1757246501849-4.png)
+
+
 
 ### 2.3.3 对多智能体系统的理论启发
 
@@ -357,10 +363,11 @@ ELIZA的实践清晰地揭示了符号主义方法的核心矛盾：系统看似
 
 在这种范式下，智能体不再是一个被动执行规则的逻辑推理机，而是一个能够通过经验自我优化的适应性系统。如图2.7所示，这代表了构建智能体核心思想的根本性转变。符号主义试图将人类的知识显式地编码给机器，而联结主义则试图创造出能够像人类一样学习知识的机器。
 
-<div align="center">
-  <img src="images/1757246501849-5.png" alt="图片描述" width="90%"/>
-  <p>图 2.7 符号主义与联结主义范式对比</p>
-</div>
+
+
+![图 2.7 符号主义与联结主义范式对比](images/1757246501849-5.png)
+
+
 
 联结主义的兴起，特别是深度学习在21世纪的成功，为智能体赋予了强大的感知和模式识别能力，使其能够直接从原始数据（如图像、声音、文本）中理解世界，这是符号主义时代难以想象的。然而，如何让智能体学会在与环境的动态交互中做出最优的序贯决策，则需要另一种学习范式的补充。
 
@@ -382,10 +389,11 @@ ELIZA的实践清晰地揭示了符号主义方法的核心矛盾：系统看似
 
 基于上述核心要素，强化学习智能体在一个“感知-行动-学习”的闭环中持续迭代，其工作模式如图2.8所示。
 
-<div align="center">
-  <img src="images/1757246501849-6.png" alt="图片描述" width="90%"/>
-  <p>图 2.8 强化学习的核心交互循环</p>
-</div>
+
+
+![图 2.8 强化学习的核心交互循环](images/1757246501849-6.png)
+
+
 
 这个循环的具体步骤如下：
 
@@ -410,10 +418,11 @@ ELIZA的实践清晰地揭示了符号主义方法的核心矛盾：系统看似
 
 如图2.9所示，直观地展示了这一预训练与微调的完整流程：通用文本数据经过自监督学习形成基础模型，随后通过特定任务数据进行微调，最终适应各项下游任务。
 
-<div align="center">
-  <img src="images/1757246501849-7.png" alt="图片描述" width="90%"/>
-  <p>图 2.9 “预训练-微调”范式示意图</p>
-</div>
+
+
+![图 2.9 “预训练-微调”范式示意图](images/1757246501849-7.png)
+
+
 
 <strong>大型语言模型的诞生与涌现能力</strong>
 
@@ -430,10 +439,11 @@ ELIZA的实践清晰地揭示了符号主义方法的核心矛盾：系统看似
 
 随着大型语言模型技术的飞速发展，以LLM为核心的智能体已成为人工智能领域的新范式。它不仅能够理解和生成人类语言，更重要的是，能够通过与环境的交互，自主地感知、规划、决策和执行任务。
 
-<div align="center">
-  <img src="images/1757246501849-8.png" alt="图片描述" width="90%"/>
-  <p>图 2.10 LLM驱动的智能体核心组件架构</p>
-</div>
+
+
+![图 2.10 LLM驱动的智能体核心组件架构](images/1757246501849-8.png)
+
+
 
 如第一章所述，智能体与环境的交互可以被抽象为一个核心循环。LLM驱动的智能体通过一个由多个模块协同工作的、持续迭代的闭环流程来完成任务。该流程遵循图2.10所示的架构，具体步骤如下：
 
@@ -462,17 +472,19 @@ ELIZA的实践清晰地揭示了符号主义方法的核心矛盾：系统看似
 
 进入21世纪20年代，这些思想流派以前所未有的方式深度融合。以GPT系列为代表的大语言模型，其本身是联结主义的产物，却成为了执行符号推理、进行工具调用和规划决策的核心“大脑”，形成了神经-符号结合的现代智能体架构。为了系统性地回顾这一发展脉络，下图2.11梳理了从20世纪50年代至今，人工智能体发展史上的关键理论、项目与事件，为读者提供一个清晰的全局概览，作为本章知识的沉淀。
 
-<div align="center">
-  <img src="images/1757246501849-9.png" alt="图片描述" width="90%"/>
-  <p>图 2.11 智能体发展演进时间线（未完全版）</p>
-</div>
+
+
+![图 2.11 智能体发展演进时间线（未完全版）](images/1757246501849-9.png)
+
+
 
 得益于大语言模型的突破，智能体技术栈呈现出前所未有的活跃度和多样性。图2.12展示了当前AI Agent领域的一个典型技术栈全貌，涵盖了从底层模型到上层应用的各个环节。
 
-<div align="center">
-  <img src="images/1757246501849-10.png" alt="图片描述" width="90%"/>
-  <p>图 2.12 AI Agent 技术栈概览</p>
-</div>
+
+
+![图 2.12 AI Agent 技术栈概览](images/1757246501849-10.png)
+
+
 
 该技术栈图由Letta公司于2024年11月发布<sup>[10]</sup>，它将AI智能体相关的工具、平台和服务进行了分层与分类，为我们理解当前的市场格局和技术选型提供了宝贵的参考。
 
