--- a/08.第八章-记忆与检索.md
+++ b/08.第八章-记忆与检索.md
@@ -11,10 +11,11 @@
 
 在构建智能体的记忆系统之前，让我们先从认知科学的角度理解人类是如何处理和存储信息的。人类记忆是一个多层级的认知系统，它不仅能存储信息，还能根据重要性、时间和上下文对信息进行分类和整理。认知心理学为理解记忆的结构和过程提供了经典的理论框架<sup>[1]</sup>，如图8.1所示。
 
-<div align="center">
-  <img src="images/8-1.png" alt="人类记忆系统结构图" width="85%"/>
-  <p>图 8.1 人类记忆系统的层次结构</p>
-</div>
+
+
+![图 8.1 人类记忆系统的层次结构](images/8-1.png)
+
+
 
 根据认知心理学的研究，人类记忆可以分为以下几个层次：
 
@@ -72,10 +73,11 @@ print(response2)  # "抱歉，我不知道您的学习进度..."
 ### 8.1.3 记忆与RAG系统架构设计
 
 基于第七章建立的框架基础和认知科学的启发，我们设计了一个分层的记忆与RAG系统架构，如图8.2所示。这个架构不仅借鉴了人类记忆系统的层次结构，还充分考虑了工程实现的可扩展性。在实现上，我们将记忆和RAG设计为两个独立的工具：`memory_tool`负责存储和维护对话过程中的交互信息，`rag_tool`则负责从用户提供的知识库中检索相关信息作为上下文，并可将重要的检索结果自动存储到记忆系统中。
-<div align="center">
-  <img src="images/8-2.png" alt="HelloAgents记忆与RAG系统架构图" width="95%"/>
-  <p>图 8.2 HelloAgents记忆与RAG系统整体架构</p>
-</div>
+
+
+![图 8.2 HelloAgents记忆与RAG系统整体架构](images/8-2.png)
+
+
 
 记忆系统采用了四层架构设计：
 
@@ -284,10 +286,11 @@ INFO:hello_agents.memory.storage.qdrant_store:✅ 使用现有Qdrant集合: rag_
 
 在进入代码实现阶段前，我们需要先定义记忆系统的工作流程。该流程参考了认知科学中的记忆模型，并将每个认知阶段映射为具体的技术组件和操作。理解这一映射关系，有助于我们后续的代码实现。
 
-<div align="center">
-  <img src="images/8-3.png" alt="记忆形成过程" width="90%"/>
-  <p>图 8.3 记忆形成的认知过程</p>
-</div>
+
+
+![图 8.3 记忆形成的认知过程](images/8-3.png)
+
+
 
 如图8.3所示，根据认知科学的研究，人类记忆的形成经历以下几个阶段：
 
@@ -300,10 +303,11 @@ INFO:hello_agents.memory.storage.qdrant_store:✅ 使用现有Qdrant集合: rag_
 
 基于该启发，我们为 HelloAgents 设计了一套完整的记忆系统。其核心思想是模仿人类大脑处理不同类型信息的方式，将记忆划分为多个专门的模块，并建立一套智能化的管理机制。图8.4详细展示了这套系统的工作流程，包括记忆的添加、检索、整合和遗忘等关键环节。
 
-<div align="center">
-  <img src="images/8-4.png" alt="记忆系统工作流程" width="95%"/>
-  <p>图 8.4 HelloAgents记忆系统的完整工作流程</p>
-</div>
+
+
+![图 8.4 HelloAgents记忆系统的完整工作流程](images/8-4.png)
+
+
 
 我们的记忆系统由四种不同类型的记忆模块构成，每种模块都针对特定的应用场景和生命周期进行了优化：
 
@@ -1111,10 +1115,11 @@ def _calculate_recency_score(self, timestamp: str) -> float:
 
 在深入实现细节之前，可以通过流程图来梳理Helloagents的RAG系统完整工作流程：
 
-<div align="center">
-  <img src="images/8-5.png" alt="RAG系统核心原理" width="85%"/>
-  <p>图 8.5 RAG系统的核心工作原理</p>
-</div>
+
+
+![图 8.5 RAG系统的核心工作原理](images/8-5.png)
+
+
 
 如图8.5所示，展示了RAG系统的两个主要工作模式：
 1. <strong>数据处理流程</strong>：处理和存储知识文档，在这里我们采取工具`Markitdown`，设计思路是将传入的一切外部知识源统一转化为Markdown格式进行处理。
@@ -1673,10 +1678,11 @@ def search_vectors_expanded(
 
 为了更清晰地展示整个系统的工作流程，图8.6展示了五个步骤之间的关系和数据流动。五个步骤形成了一个完整的闭环：步骤1将PDF文档处理后的信息记录到记忆系统，步骤2的检索结果也会记录到记忆系统，步骤3展示记忆系统的完整功能（添加、检索、整合、遗忘），步骤4整合RAG和Memory提供智能路由，步骤5收集所有统计信息生成学习报告。
 
-<div align="center">
-  <img src="images/8-6.png" alt="" width="85%"/>
-  <p>图 8.6 智能问答助手的五步执行流程</p>
-</div>
+
+
+![图 8.6 智能问答助手的五步执行流程](images/8-6.png)
+
+
 
 接下来，我们将展示如何实现这个Web应用。整个应用分为三个核心部分：
 
@@ -1973,31 +1979,35 @@ def generate_report(self, save_to_file: bool = True) -> Dict[str, Any]:
 
 接下来是运行效果展示，如图8.7所示，进入主页面后需要先初始化助手，也就是加载我们的数据库，模型，API之类的载入操作。后传入PDF文档，并点击加载文档。
 
-<div align="center">
-  <img src="images/8-7.png" alt="" width="85%"/>
-  <p>图 8.7 问答助手主页面</p>
-</div>
+
+
+![图 8.7 问答助手主页面](images/8-7.png)
+
+
 
 第一个功能是智能问答，将可以基于上传的文档进行检索，并返回参考来源和相关资料的相似度计算，这是RAG tool能力的体现，如图8.8所示。
 
-<div align="center">
-  <img src="images/8-8.png" alt="" width="85%"/>
-  <p>图 8.8 问答助手主页面</p>
-</div>
+
+
+![图 8.8 问答助手主页面](images/8-8.png)
+
+
 
 第二个功能是学习笔记，如图8.9所示，可以对于相关概念进行勾选，以及撰写笔记内容，这一部分运用到Memory tool，将会存放你的个人笔记在数据库内，方便统计和后续返回整体的学习报告。
 
-<div align="center">
-  <img src="images/8-9.png" alt="" width="85%"/>
-  <p>图 8.9 问答助手主页面</p>
-</div>
+
+
+![图 8.9 问答助手主页面](images/8-9.png)
+
+
 
 最后是学习进度的统计和报告的生成，如图8.10所示，我们将可以看到使用助手期间加载的文档数量，提问次数，和笔记数量，最终将我们的问答结果和笔记整理为一个JSON文档返回。
 
-<div align="center">
-  <img src="images/8-10.png" alt="" width="85%"/>
-  <p>图 8.10 问答助手主页面</p>
-</div>
+
+
+![图 8.10 问答助手主页面](images/8-10.png)
+
+
 
 通过这个问答助手的案例，我们展示了如何使用RAGTool和MemoryTool构建一个完整的<strong>基于Web的智能文档问答系统</strong>。完整的代码可以在`code/chapter8/11_Q&A_Assistant.py`中找到。启动后访问 `http://localhost:7860` 即可使用这个智能学习助手。
 
@@ -2025,10 +2035,11 @@ def generate_report(self, save_to_file: bool = True) -> Dict[str, Any]:
 
 最后，让我们通过一个思维导图来总结本章的完整知识体系，如图8.11所示：
 
-<div align="center">
-  <img src="images/8-11.png" alt="" width="85%"/>
-  <p>图 8.11 Hello-agents第八章知识总结</p>
-</div>
+
+
+![图 8.11 Hello-agents第八章知识总结](images/8-11.png)
+
+
 
 本章展示了HelloAgents框架记忆系统和RAG技术的能力，我们成功构建了一个具有真正"智能"的学习助手。这种架构可以轻松扩展到其他应用场景，如客户服务、技术支持、个人助理等领域。
 
