--- a/14.第十四章-自动化深度研究智能体.md
+++ b/14.第十四章-自动化深度研究智能体.md
@@ -29,10 +29,11 @@
 
 此次系统仍然采用经典的<strong>前后端分离架构</strong>，如图 14.1 所示。
 
-<div align="center">
-  <img src="images/14-1.png" alt="" width="85%"/>
-  <p>图 14.1 深度研究助手技术架构</p>
-</div>
+
+
+![图 14.1 深度研究助手技术架构](images/14-1.png)
+
+
 
 系统分为四层架构设计：
 
@@ -46,10 +47,11 @@
 
 让我们看看一个完整的研究请求是如何在系统中流转的，如图 14.2 所示：
 
-<div align="center">
-  <img src="images/14-2.png" alt="" width="85%"/>
-  <p>图 14.2 深度研究助手数据流转过程</p>
-</div>
+
+
+![图 14.2 深度研究助手数据流转过程](images/14-2.png)
+
+
 
 1. <strong>用户输入</strong>：用户在前端输入研究主题
 2. <strong>前端发送</strong>：前端通过 SSE 连接到`/research/stream`
@@ -171,17 +173,19 @@ npm run dev
 
 打开浏览器访问 `http://localhost:5174`，你会看到一个居中的输入卡片，如图 14.3 所示。输入研究主题，例如`Datawhale是一个什么样的组织？`，选择搜索引擎（如果配置了多个），点击"开始研究"按钮。
 
-<div align="center">
-  <img src="images/14-3.png" alt="" width="85%"/>
-  <p>图 14.3 深度研究助手搜索页面</p>
-</div>
+
+
+![图 14.3 深度研究助手搜索页面](images/14-3.png)
+
+
 
 如图 14.4 所示，系统会自动展开为全屏，左侧显示研究信息，右侧实时显示研究进度和结果。整个研究过程大约需要 1-3 分钟，取决于主题的复杂度和搜索引擎的响应速度。
 
-<div align="center">
-  <img src="images/14-4.png" alt="" width="85%"/>
-  <p>图 14.4 深度研究助手展开研究</p>
-</div>
+
+
+![图 14.4 深度研究助手展开研究](images/14-4.png)
+
+
 
 研究完成后，你会看到：
 
@@ -248,10 +252,11 @@ npm run dev
 
 在我们的案例里，TODO 驱动的研究流程如图 14.5 所示：
 
-<div align="center">
-  <img src="images/14-5.png" alt="" width="85%"/>
-  <p>图 14.5 TODO 驱动的研究流程</p>
-</div>
+
+
+![图 14.5 TODO 驱动的研究流程](images/14-5.png)
+
+
 
 
 整个流程是线性的，但每个阶段都有明确的输入和输出。这种设计使得系统易于理解和调试。
@@ -436,9 +441,11 @@ Datawhale发布了多个高质量的开源教程，包括Hello-Agents、Joyful-P
 
 如表 14.1 所示，三个 Agent 分别负责规划、总结和报告生成。
 
-<div align="center">
-  <img src="images/14-table-1.png" alt="" width="85%"/>
-</div>
+
+
+![图片](images/14-table-1.png)
+
+
 
 让我们详细介绍每个 Agent 的设计。
 
@@ -837,10 +844,11 @@ class DeepResearchAgent:
 
 三个 Agent 之间是<strong>顺序协作</strong>的关系，如图 14.6 所示。
 
-<div align="center">
-  <img src="images/14-6.png" alt="" width="85%"/>
-  <p>图 14.6 Agent 协作流程</p>
-</div>
+
+
+![图 14.6 Agent 协作流程](images/14-6.png)
+
+
 
 顺序协作模式的特点是：
 
@@ -896,9 +904,11 @@ class DeepResearchAgent:
 
 如表 14.2 所示，这次增加的搜索引擎有不同的特点和适用场景。
 
-<div align="center">
-  <img src="images/14-table-2.png" alt="" width="85%"/>
-</div>
+
+
+![图片](images/14-table-2.png)
+
+
 
 我们不再单独讨论如何扩展，可以参考源码以及第七章的拓展案例实现。`SearchTool`提供了统一的搜索接口，无论使用哪个搜索引擎，调用方式都是一样的。
 
@@ -1076,10 +1086,11 @@ agent = ToolAwareSimpleAgent(
 
 当 Agent 需要调用工具时，它会生成工具调用指令，如图 14.7 所示。
 
-<div align="center">
-  <img src="images/14-7.png" alt="" width="85%"/>
-  <p>图 14.7 工具调用流程</p>
-</div>
+
+
+![图 14.7 工具调用流程](images/14-7.png)
+
+
 
 **工具调用流程<strong>：
 
@@ -1604,10 +1615,11 @@ class SearchService:
 
 根据配置选择搜索引擎，如图 14.8 所示：
 
-<div align="center">
-  <img src="images/14-8.png" alt="" width="85%"/>
-  <p>图 14.8 搜索引擎调度流程</p>
-</div>
+
+
+![图 14.8 搜索引擎调度流程](images/14-8.png)
+
+
 
 **调度逻辑<strong>：
 
@@ -1684,10 +1696,11 @@ class SearchService:
 
 如图 14.9 所示，全屏模态对话框包含以下部分：
 
-<div align="center">
-  <img src="images/14-9.png" alt="" width="85%"/>
-  <p>图 14.9 全屏模态对话框 UI</p>
-</div>
+
+
+![图 14.9 全屏模态对话框 UI](images/14-9.png)
+
+
 
 </strong>UI 组件<strong>：
 
@@ -1842,10 +1855,11 @@ watch(() => props.isOpen, (isOpen) => {
 
 如图 14.10 所示，SSE 流程包括以下步骤：
 
-<div align="center">
-  <img src="images/14-10.png" alt="" width="85%"/>
-  <p>图 14.10 SSE 流程</p>
-</div>
+
+
+![图 14.10 SSE 流程](images/14-10.png)
+
+
 
 <strong>流程说明</strong>：
 
