--- a/15.第十五章-构建赛博小镇.md
+++ b/15.第十五章-构建赛博小镇.md
@@ -28,19 +28,21 @@
 
 赛博小镇采用<strong>游戏引擎+后端服务</strong>的分离架构，分为四个层次，如图 15.1 所示。
 
-<div align="center">
-  <img src="images/15-1.png" alt="" width="85%"/>
-  <p>图 15.1 赛博小镇技术架构</p>
-</div>
+
+
+![图 15.1 赛博小镇技术架构](images/15-1.png)
+
+
 
 前端层使用 Godot 4.5 游戏引擎，负责游戏渲染、玩家控制、NPC 显示和对话 UI。Godot 是一个开源的 2D/3D 游戏引擎，非常适合快速开发像素风格的游戏。后端层使用 FastAPI 框架，负责 API 路由、NPC 状态管理、对话处理和日志记录。FastAPI 是一个现代化的 Python Web 框架，性能优秀且易于开发。智能体层使用我们自己构建的 HelloAgents 框架，负责 NPC 智能、记忆管理和好感度计算。每个 NPC 都是一个 SimpleAgent 实例，拥有独立的记忆和状态。外部服务层提供 LLM 能力、向量存储和数据持久化，包括 LLM API、Qdrant 向量数据库和 SQLite 关系数据库。
 
 数据流转过程如图 15.2 所示：
 
-<div align="center">
-  <img src="images/15-2.png" alt="" width="85%"/>
-  <p>图 15.2 数据流转过程</p>
-</div>
+
+
+![图 15.2 数据流转过程](images/15-2.png)
+
+
 
 
 玩家在 Godot 中按 E 键与 NPC 互动，Godot 通过 HTTP API 发送对话请求到 FastAPI 后端。后端调用 HelloAgents 的 SimpleAgent 处理对话，Agent 从记忆系统中检索相关历史，然后调用 LLM 生成回复。后端更新 NPC 状态和好感度，记录日志到控制台和文件，最后返回回复给 Godot 前端。Godot 显示 NPC 回复并更新 UI，完成一次完整的交互循环。
@@ -136,17 +138,19 @@ Godot 的安装非常简单，Windows 提供了直接打开的`.exe`文件，Mac
 
 游戏启动后，你会看到一个像素风格的 Datawhale 办公室场景，如图 15.3 所示。
 
-<div align="center">
-  <img src="images/15-3.png" alt="" width="85%"/>
-  <p>图 15.3 赛博小镇游戏场景</p>
-</div>
+
+
+![图 15.3 赛博小镇游戏场景](images/15-3.png)
+
+
 
 使用 WASD 键移动玩家角色，走到 NPC 附近时，屏幕上会显示"按 E 键交互"的提示。按下 E 键后，会弹出对话框，你可以输入任何想说的话，如图 15.4 所示。
 
-<div align="center">
-  <img src="images/15-4.png" alt="" width="85%"/>
-  <p>图 15.4 与 NPC 对话界面</p>
-</div>
+
+
+![图 15.4 与 NPC 对话界面](images/15-4.png)
+
+
 
 NPC 会根据自己的角色设定(Python 工程师、产品经理、UI 设计师)和你们的互动历史做出回应。随着对话的进行，NPC 对你的好感度会逐渐提升，从"陌生"到"熟悉"，再到"友好"、"亲密"甚至"挚友"。
 
@@ -216,10 +220,11 @@ def create_npc_agent(npc_id: str, name: str, role: str, personality: str):
 
 NPC Agent 的工作流程如图 15.5 所示：
 
-<div align="center">
-  <img src="images/15-5.png" alt="" width="85%"/>
-  <p>图 15.5 NPC Agent 工作流程</p>
-</div>
+
+
+![图 15.5 NPC Agent 工作流程](images/15-5.png)
+
+
 
 
 ### 15.2.2 NPC 角色设定与 Prompt 设计
@@ -277,10 +282,11 @@ npc_wang = {
 
 记忆系统的架构如图 15.6 所示：
 
-<div align="center">
-  <img src="images/15-6.png" alt="" width="85%"/>
-  <p>图 15.6 记忆系统架构</p>
-</div>
+
+
+![图 15.6 记忆系统架构](images/15-6.png)
+
+
 
 
 在实际使用中，Agent 会先从短期记忆中获取最近的对话，然后从长期记忆中检索相关的历史对话，将这些信息一起发送给 LLM，生成更加准确和个性化的回复。
@@ -322,10 +328,11 @@ def process_dialogue(agent, player_message):
 
 批量生成的工作流程如图 15.7 所示：
 
-<div align="center">
-  <img src="images/15-7.png" alt="" width="85%"/>
-  <p>图 15.7 批量生成 vs 传统模式</p>
-</div>
+
+
+![图 15.7 批量生成 vs 传统模式](images/15-7.png)
+
+
 
 
 批量生成器的实现非常巧妙。我们构建一个特殊的提示词，要求 LLM 一次性生成所有 NPC 的对话，并以 JSON 格式返回。这样，一次 API 调用就能获得所有 NPC 的回复，成本降低到原来的 1/3，延迟也大幅减少。
@@ -490,10 +497,11 @@ async def background_dialogue_update():
 
 我们将好感度分为五个等级，每个等级对应一个分数范围，如图 15.8 所示：
 
-<div align="center">
-  <img src="images/15-8.png" alt="" width="85%"/>
-  <p>图 15.8 好感度等级划分</p>
-</div>
+
+
+![图 15.8 好感度等级划分](images/15-8.png)
+
+
 
 - <strong>陌生(0-20 分)</strong>：NPC 刚认识玩家，态度礼貌但保持距离。回复简短，不会主动分享个人信息。
 
@@ -515,10 +523,11 @@ async def background_dialogue_update():
 
 好感度计算流程如图 15.9 所示：
 
-<div align="center">
-  <img src="images/15-9.png" alt="" width="85%"/>
-  <p>图 15.9 好感度计算流程</p>
-</div>
+
+
+![图 15.9 好感度计算流程](images/15-9.png)
+
+
 
 
 ```python
@@ -649,10 +658,11 @@ def create_npc_agent_with_affinity(npc_id: str, name: str, role: str,
 
 我们的 FastAPI 应用采用模块化设计，将不同的功能分离到不同的文件中，如图 15.10 所示:
 
-<div align="center">
-  <img src="images/15-10.png" alt="" width="85%"/>
-  <p>图 15.10 后端应用结构</p>
-</div>
+
+
+![图 15.10 后端应用结构](images/15-10.png)
+
+
 
 
 让我们从`main.py`开始，这是 FastAPI 应用的入口文件：
@@ -838,10 +848,11 @@ async def get_affinity(npc_id: str, player_name: str):
 
 API 路由的调用流程如图 15.11 所示：
 
-<div align="center">
-  <img src="images/15-11.png" alt="" width="85%"/>
-  <p>图 15.11 API 调用流程</p>
-</div>
+
+
+![图 15.11 API 调用流程](images/15-11.png)
+
+
 
 
 ### 15.4.3 状态管理与日志系统
@@ -1048,10 +1059,11 @@ Player (CharacterBody2D)  ← 根节点,负责物理移动
 
 让我们先看看四个核心场景的结构，如图 15.12 所示：
 
-<div align="center">
-  <img src="images/15-12.png" alt="" width="85%"/>
-  <p>图 15.12 赛博小镇的四个核心场景</p>
-</div>
+
+
+![图 15.12 赛博小镇的四个核心场景](images/15-12.png)
+
+
 
 
 这个图展示了四个独立的场景及其内部结构。<strong>场景 1(Main)</strong>是主场景，它包含了背景图片(Sprite2D)、玩家实例、NPCs 组织节点(下面有三个 NPC 实例)、对话界面实例、墙体组织节点和背景音乐。注意，这里的 Player、NPC_Zhang、NPC_Li、NPC_Wang 和 DialogueUI 都是场景实例，不是普通节点。<strong>场景 2(Player)</strong>定义了玩家角色的结构，包含动画、碰撞、摄像机和两个音效节点。<strong>场景 3(NPC)</strong>是一个通用模板，张三、李四、王五都是这个场景的实例，包含碰撞、动画、交互区域和两个标签。<strong>场景 4(DialogueUI)</strong>是一个 CanvasLayer 节点，包含 Panel 和各种 UI 元素。
@@ -1601,10 +1613,11 @@ func _on_npcs_request_completed(_result: int, response_code: int, _headers: Pack
 
 对话 UI 的结构如图 15.13 所示：
 
-<div align="center">
-  <img src="images/15-13.png" alt="" width="85%"/>
-  <p>图 15.13 对话 UI 结构</p>
-</div>
+
+
+![图 15.13 对话 UI 结构](images/15-13.png)
+
+
 
 
 对话 UI 的设计非常简洁。DialogueUI 是一个 CanvasLayer 节点，这意味着它会始终显示在游戏画面的最上层，不会被其他游戏对象遮挡。Panel 是对话框的背景，锚定在屏幕底部。Panel 下直接放置了 6 个 UI 元素：NPCName 显示 NPC 的名字，NPCTitle 显示职位，DialogueText 使用 RichTextLabel 显示对话内容(支持富文本格式)，PlayerInput 是一个 LineEdit 用于玩家输入，SendButton 和 CloseButton 分别用于发送消息和关闭对话框。
@@ -1813,10 +1826,11 @@ func get_npc_node(npc_name: String) -> Node2D:
 
 整个前后端通信流程如图 15.14 所示：
 
-<div align="center">
-  <img src="images/15-14.png" alt="" width="85%"/>
-  <p>图 15.14 前后端通信完整流程</p>
-</div>
+
+
+![图 15.14 前后端通信完整流程](images/15-14.png)
+
+
 
 
 至此，前后端通信的所有功能都已实现。玩家可以在游戏中自由移动，与 NPC 互动，进行自然语言对话。同时，主场景会定时从后端获取 NPC 状态，更新 NPC 的对话气泡，展示 NPC 之间的自主对话。整个系统使用信号机制进行通信，各个组件之间松耦合，易于维护和扩展。
@@ -1850,10 +1864,11 @@ func get_npc_node(npc_name: String) -> Node2D:
 
 整个项目的技术栈如图 15.15 所示：
 
-<div align="center">
-  <img src="images/15-15.png" alt="" width="85%"/>
-  <p>图 15.15 赛博小镇技术栈</p>
-</div>
+
+
+![图 15.15 赛博小镇技术栈](images/15-15.png)
+
+
 
 
 ### 15.7.2 扩展方向
