--- a/07.第七章-构建你的Agent框架.md
+++ b/07.第七章-构建你的Agent框架.md
@@ -2168,7 +2168,7 @@ async def test_parallel_execution():
 
 2. 在7.2节中，我们扩展了 `HelloAgentsLLM` 以支持多模型供应商和本地模型调用。
 
-   > <strong>提示</strong>：这是一道实践题，建议实际操作
+   > **提示**：这是一道实践题，建议实际操作
 
    - 参考7.2.1节的示例，尝试为 `HelloAgentsLLM` 添加一个新模型供应商的支持（如`Gemini`、`Anthropic`、`Kim`）。要求通过继承方式实现，并能够自动检测该提供商的环境变量。
    - 在7.2.3节中介绍了自动检测机制的三个优先级。请分析：如果同时设置了 `OPENAI_API_KEY` 和 `LLM_BASE_URL="http://localhost:11434/v1"`，框架最后会选择哪个提供商？这种优先级设计是否合理？
@@ -2182,7 +2182,7 @@ async def test_parallel_execution():
 
 4. 在7.4节中，我们动手进行了四种 `Agent` 范式的框架化实现。
 
-   > <strong>提示</strong>：这是一道实践题，建议实际操作
+   > **提示**：这是一道实践题，建议实际操作
 
    - 对比第四章从零实现的 `ReActAgent` 和本章框架化的 `ReActAgent`，列举3个具体的改进点，并说明这些改进如何提升了代码的可维护性和可扩展性。
    - `ReflectionAgent` 实现了"执行-反思-优化"循环。请扩展这个实现，添加一个"质量评分"机制：在每次反思后，让 `LLM` 对当前版本的输出打分，只有分数低于阈值时才继续优化，否则提前终止。
