--- a/15.第十五章-构建赛博小镇.md
+++ b/15.第十五章-构建赛博小镇.md
@@ -1,18 +1,18 @@
 # 第十五章 构建赛博小镇
 
-这一章，我们将探索一个全新的方向：<strong>将智能体技术与游戏引擎结合，构建一个充满生命力的 AI 小镇</strong>。
+这一章，我们将探索一个全新的方向：**将智能体技术与游戏引擎结合，构建一个充满生命力的 AI 小镇**。
 
 还记得《模拟人生》或《动物森友会》中那些栩栩如生的 NPC 吗?他们有自己的性格、记忆和社交关系。本章的赛博小镇将是一个类似的项目，但与传统游戏不同的是，我们的 NPC 拥有真正的"智能"——他们能够理解玩家的对话，记住过去的互动，并根据好感度做出不同的反应。本章的赛博小镇包含以下核心功能：
 
-<strong>（1）智能 NPC 对话系统</strong>：玩家可以与 NPC 进行自然语言对话，NPC 会根据自己的角色设定和记忆做出回应。
+**（1）智能 NPC 对话系统**：玩家可以与 NPC 进行自然语言对话，NPC 会根据自己的角色设定和记忆做出回应。
 
-<strong>（2）记忆系统</strong>：NPC 拥有短期记忆和长期记忆，能够记住与玩家的互动历史。
+**（2）记忆系统**：NPC 拥有短期记忆和长期记忆，能够记住与玩家的互动历史。
 
-<strong>（3）好感度系统</strong>：NPC 对玩家的态度会随着互动而变化，从陌生到熟悉，从友好到亲密。
+**（3）好感度系统**：NPC 对玩家的态度会随着互动而变化，从陌生到熟悉，从友好到亲密。
 
-<strong>（4）游戏化交互</strong>：玩家可以在 2D 像素风格的办公室场景中自由移动，与不同的 NPC 互动。
+**（4）游戏化交互**：玩家可以在 2D 像素风格的办公室场景中自由移动，与不同的 NPC 互动。
 
-<strong>（5）实时日志系统</strong>：所有对话和互动都会被记录，方便调试和分析。
+**（5）实时日志系统**：所有对话和互动都会被记录，方便调试和分析。
 
 ## 15.1 项目概述与架构设计
 
@@ -26,7 +26,7 @@
 
 ### 15.1.2 技术架构概览
 
-赛博小镇采用<strong>游戏引擎+后端服务</strong>的分离架构，分为四个层次，如图 15.1 所示。
+赛博小镇采用**游戏引擎+后端服务**的分离架构，分为四个层次，如图 15.1 所示。
 
 
 
@@ -89,17 +89,17 @@ Helloagents-AI-Town/
 
 在深入学习实现细节之前，让我们先把项目跑起来，看看最终的效果。这样你会对整个系统有一个直观的认识。
 
-<strong>环境要求：</strong>
+**环境要求：**
 
 - Godot 4.2 或更高版本
 - Python 3.10 或更高版本
 - LLM API 密钥(OpenAI、DeepSeek、智谱等)
 
-<strong>获取项目：</strong>
+**获取项目：**
 
 你可以到`code/chapter15/Helloagents-AI-Town`中查看，或者从 GitHub 克隆完整的 hello-agents 仓库。
 
-<strong>启动后端：</strong>
+**启动后端：**
 
 ```bash
 # 1. 进入backend目录
@@ -128,13 +128,13 @@ python main.py
 ============================================================
 ```
 
-<strong>启动 Godot：</strong>
+**启动 Godot：**
 
 Godot 的安装非常简单，Windows 提供了直接打开的`.exe`文件，Mac 也提供了`.dmg`文件。可直接在官网下载([Windows](https://godotengine.org/download/windows/) / [Mac](https://godotengine.org/download/macos/))
 
 打开 Godot 引擎，点击"导入"按钮，浏览到`Helloagents-AI-Town/helloagents-ai-town/scenes/main.tscn`，点击"导入并编辑"。等待 Godot 导入资源后，按`F5`或点击"运行"按钮启动游戏。
 
-<strong>体验核心功能：</strong>
+**体验核心功能：**
 
 游戏启动后，你会看到一个像素风格的 Datawhale 办公室场景，如图 15.3 所示。
 
@@ -154,7 +154,7 @@ Godot 的安装非常简单，Windows 提供了直接打开的`.exe`文件，Mac
 
 NPC 会根据自己的角色设定(Python 工程师、产品经理、UI 设计师)和你们的互动历史做出回应。随着对话的进行，NPC 对你的好感度会逐渐提升，从"陌生"到"熟悉"，再到"友好"、"亲密"甚至"挚友"。
 
-<strong>好感度系统在后端实现</strong>，每次对话都会根据玩家的消息内容和情感分析来调整好感度值。虽然前端游戏界面中没有直接显示好感度数值，但所有的好感度变化都会被详细记录在后端日志中。你可以在`backend/logs/dialogue_YYYY-MM-DD.log`文件中查看每次对话的好感度变化。日志文件会记录每次对话的详细信息，包括：当前好感度值、检索到的相关记忆、NPC 的回复、好感度变化量(+2.0、+3.0 等)、变化原因(友好问候、正常交流等)以及情感分析结果(positive、neutral 等)。这种设计让开发者可以清晰地追踪 NPC 与玩家的关系发展，也为后续在前端添加好感度 UI 提供了数据基础。
+**好感度系统在后端实现**，每次对话都会根据玩家的消息内容和情感分析来调整好感度值。虽然前端游戏界面中没有直接显示好感度数值，但所有的好感度变化都会被详细记录在后端日志中。你可以在`backend/logs/dialogue_YYYY-MM-DD.log`文件中查看每次对话的好感度变化。日志文件会记录每次对话的详细信息，包括：当前好感度值、检索到的相关记忆、NPC 的回复、好感度变化量(+2.0、+3.0 等)、变化原因(友好问候、正常交流等)以及情感分析结果(positive、neutral 等)。这种设计让开发者可以清晰地追踪 NPC 与玩家的关系发展，也为后续在前端添加好感度 UI 提供了数据基础。
 
 所有的对话都会被记录在后端的日志文件中，你可以通过以下命令实时查看：
 
@@ -231,7 +231,7 @@ NPC Agent 的工作流程如图 15.5 所示：
 
 一个好的 NPC 需要有鲜明的性格和角色设定。在赛博小镇中，我们设计了三个 NPC，分别代表不同的职业和性格。
 
-<strong>张三 - Python 工程师</strong>
+**张三 - Python 工程师**
 
 张三是一位资深的 Python 工程师，负责 HelloAgents 框架的核心开发。他性格严谨，说话直接，喜欢用技术术语。他对代码质量有很高的要求，经常会分享一些编程技巧和最佳实践。
 
@@ -244,7 +244,7 @@ npc_zhang = {
 }
 ```
 
-<strong>李四 - 产品经理</strong>
+**李四 - 产品经理**
 
 李四是一位经验丰富的产品经理，负责 HelloAgents 框架的产品规划和用户体验设计。他性格外向，善于沟通，总是能从用户的角度思考问题。他喜欢讨论产品设计和用户需求，经常会问"为什么"。
 
@@ -257,7 +257,7 @@ npc_li = {
 }
 ```
 
-<strong>王五 - UI 设计师</strong>
+**王五 - UI 设计师**
 
 王五是一位富有创意的 UI 设计师，负责 HelloAgents 框架的界面设计和视觉呈现。他性格温和，审美独特，对色彩和布局有敏锐的感知。他喜欢讨论设计理念和美学，经常会分享一些设计灵感。
 
@@ -324,7 +324,7 @@ def process_dialogue(agent, player_message):
 
 在实际运行中，很快就会发现了一个问题：当多个玩家同时与不同的 NPC 对话时，后端需要并发处理多个 LLM 请求。每个请求都需要调用 API，这不仅增加了成本，还可能因为并发限制导致请求失败或延迟。
 
-为了解决这个问题，我们设计了一个<strong>批量对话生成系统</strong>。核心思想是：将多个 NPC 的对话请求合并成一次 LLM 调用，让 LLM 一次性生成所有 NPC 的回复。这就像餐厅的"预制菜"一样，提前批量准备好，需要时直接使用，大大降低了成本和延迟。
+为了解决这个问题，我们设计了一个**批量对话生成系统**。核心思想是：将多个 NPC 的对话请求合并成一次 LLM 调用，让 LLM 一次性生成所有 NPC 的回复。这就像餐厅的"预制菜"一样，提前批量准备好，需要时直接使用，大大降低了成本和延迟。
 
 批量生成的工作流程如图 15.7 所示：
 
@@ -414,12 +414,12 @@ class NPCBatchGenerator：
 
 当然，批量生成也有一些限制。它更适合生成 NPC 的"背景对话"或"自言自语"，而不是与玩家的直接互动。对于玩家发起的对话，我们仍然使用单独的 Agent 来处理，以保证回复的个性化和准确性。批量生成主要用于以下场景：
 
-1. <strong>NPC 背景对话</strong>：玩家进入场景时，NPC 正在做什么、说什么
-2. <strong>定时更新</strong>：每隔一段时间更新 NPC 的状态和对话
-3. <strong>场景氛围</strong>：根据时间(早上、中午、晚上)生成不同的对话
-4. <strong>降低成本</strong>：在高并发场景下，使用批量生成降低 API 调用次数
+1. **NPC 背景对话**：玩家进入场景时，NPC 正在做什么、说什么
+2. **定时更新**：每隔一段时间更新 NPC 的状态和对话
+3. **场景氛围**：根据时间(早上、中午、晚上)生成不同的对话
+4. **降低成本**：在高并发场景下，使用批量生成降低 API 调用次数
 
-<strong>混合模式：批量生成+即时响应</strong>
+**混合模式：批量生成+即时响应**
 
 在实际实现中，我们采用了一种混合模式，将批量生成和即时响应结合起来。这个设计非常巧妙，既保证了效率，又保证了交互的质量。
 
@@ -479,10 +479,10 @@ async def background_dialogue_update():
 
 这种混合模式的优势非常明显：
 
-1. <strong>降低成本</strong>：背景对话使用批量生成，一次调用生成所有 NPC 的对话，成本低
-2. <strong>保证质量</strong>：玩家交互使用即时响应，每个回复都是个性化的，质量高
-3. <strong>提升体验</strong>：NPC 始终有"背景对话"，看起来很生动;玩家交互时回复准确，体验好
-4. <strong>灵活调整</strong>：可以根据服务器负载动态调整批量生成的频率
+1. **降低成本**：背景对话使用批量生成，一次调用生成所有 NPC 的对话，成本低
+2. **保证质量**：玩家交互使用即时响应，每个回复都是个性化的，质量高
+3. **提升体验**：NPC 始终有"背景对话"，看起来很生动;玩家交互时回复准确，体验好
+4. **灵活调整**：可以根据服务器负载动态调整批量生成的频率
 
 通过批量生成和即时响应的结合，我们实现了一个既高效又智能的 NPC 系统。在正常情况下，玩家感受不到任何差异，但后端的成本和性能得到了显著优化。这个设计思路也可以应用到其他需要大量 AI 调用的场景中。
 
@@ -503,15 +503,15 @@ async def background_dialogue_update():
 
 
 
-- <strong>陌生(0-20 分)</strong>：NPC 刚认识玩家，态度礼貌但保持距离。回复简短，不会主动分享个人信息。
+- **陌生(0-20 分)**：NPC 刚认识玩家，态度礼貌但保持距离。回复简短，不会主动分享个人信息。
 
-- <strong>熟悉(21-40 分)</strong>：NPC 开始记住玩家，愿意进行简单的交流。回复变得更加自然，偶尔会分享一些工作相关的信息。
+- **熟悉(21-40 分)**：NPC 开始记住玩家，愿意进行简单的交流。回复变得更加自然，偶尔会分享一些工作相关的信息。
 
-- <strong>友好(41-60 分)</strong>：NPC 把玩家当作朋友，愿意分享更多信息。回复更加详细，会主动询问玩家的情况。
+- **友好(41-60 分)**：NPC 把玩家当作朋友，愿意分享更多信息。回复更加详细，会主动询问玩家的情况。
 
-- <strong>亲密(61-80 分)</strong>：NPC 非常信任玩家，愿意分享私人话题。回复充满热情，会给玩家提供帮助和建议。
+- **亲密(61-80 分)**：NPC 非常信任玩家，愿意分享私人话题。回复充满热情，会给玩家提供帮助和建议。
 
-- <strong>挚友(81-100 分)</strong>：NPC 把玩家当作最好的朋友，无话不谈。回复非常亲切，会分享内心的想法和感受。
+- **挚友(81-100 分)**：NPC 把玩家当作最好的朋友，无话不谈。回复非常亲切，会分享内心的想法和感受。
 
 这个设计让玩家能够清晰地感受到与 NPC 关系的变化，也为后续的游戏玩法提供了基础。比如，只有达到一定好感度，NPC 才会分享某些特殊信息或提供特殊任务。
 
@@ -742,7 +742,7 @@ if __name__ == "__main__":
 
 赛博小镇的后端需要提供几个核心 API 端点，用于处理 Godot 前端的请求。我们将这些路由添加到`main.py`中。
 
-<strong>获取 NPC 状态</strong>
+**获取 NPC 状态**
 
 这个 API 返回所有 NPC 的当前状态，包括位置、是否忙碌等信息：
 
@@ -764,7 +764,7 @@ async def get_single_npc_status(npc_id: str):
     return npc
 ```
 
-<strong>对话接口</strong>
+**对话接口**
 
 这是最核心的 API，处理玩家与 NPC 的对话：
 
@@ -829,7 +829,7 @@ async def dialogue(request: DialogueRequest):
         state_manager.set_npc_busy(request.npc_id, False)
 ```
 
-<strong>好感度查询</strong>
+**好感度查询**
 
 这个 API 允许查询玩家与 NPC 的好感度：
 
@@ -857,7 +857,7 @@ API 路由的调用流程如图 15.11 所示：
 
 ### 15.4.3 状态管理与日志系统
 
-<strong>状态管理器</strong>
+**状态管理器**
 
 状态管理器负责跟踪每个 NPC 的当前状态，包括位置、是否忙碌、当前动作等。这对于防止并发问题很重要,比如避免一个 NPC 同时与多个玩家对话。
 
@@ -928,7 +928,7 @@ class StateManager:
         return len(self.npc_states)
 ```
 
-<strong>日志系统</strong>
+**日志系统**
 
 日志系统实现了双输出：控制台和文件。这样既方便实时查看，又能保存历史记录。
 
@@ -1002,19 +1002,19 @@ NPC回复: {npc_reply}
 
 在开始构建游戏场景之前，我们需要先理解 Godot 的核心概念——场景(Scene)和节点(Node)。这是 Godot 与其他游戏引擎最大的不同之处，也是它最强大的特性之一。
 
-<strong>什么是节点?</strong>
+**什么是节点?**
 
 节点是 Godot 中最基本的构建块。你可以把节点想象成乐高积木，每个节点都有特定的功能。比如，Sprite2D 节点用于显示图片，AudioStreamPlayer 节点用于播放音频，CharacterBody2D 节点用于处理角色的物理移动。Godot 提供了上百种不同类型的节点，每种节点都专注于做好一件事。
 
 节点之间可以形成父子关系，构成一个树状结构。父节点可以影响子节点，比如移动父节点会同时移动所有子节点，隐藏父节点会同时隐藏所有子节点。这种层级关系让我们可以轻松地组织和管理复杂的游戏对象。
 
-<strong>什么是场景?</strong>
+**什么是场景?**
 
 场景是一组节点的集合，保存在一个.tscn 文件中。你可以把场景理解为一个"预制件"。比如，我们可以创建一个"玩家"场景，包含角色的精灵、碰撞体、音效等所有相关节点。然后在游戏中多次使用这个场景，每次使用都会创建一个独立的实例。
 
 场景的强大之处在于它的可复用性和模块化。我们可以在一个场景中实例化另一个场景，形成嵌套结构。比如，主场景可以包含玩家场景、多个 NPC 场景和 UI 场景。修改 NPC 场景会自动影响所有 NPC 实例，这大大简化了开发和维护。
 
-<strong>一个简单的例子</strong>
+**一个简单的例子**
 
 让我们用一个简单的例子来理解场景和节点。假设我们要创建一个"玩家"场景：
 
@@ -1029,7 +1029,7 @@ Player (CharacterBody2D)  ← 根节点,负责物理移动
 
 当我们在主场景中实例化这个 Player 场景时，Godot 会创建这整个节点树的一个副本。我们可以创建多个玩家实例，每个实例都是独立的，有自己的位置、状态和行为。
 
-<strong>场景实例化的优势</strong>
+**场景实例化的优势**
 
 在赛博小镇中，我们有三个 NPC：张三、李四和王五。如果不使用场景系统，我们需要为每个 NPC 分别创建节点、设置属性、编写脚本，这会导致大量重复工作。而使用场景系统，我们只需要创建一个通用的 NPC 场景，然后实例化三次，通过脚本参数设置不同的名称和角色信息即可。
 
@@ -1037,17 +1037,17 @@ Player (CharacterBody2D)  ← 根节点,负责物理移动
 
 ## 15.5 Godot 游戏场景构建
 
-<strong>为什么选择 Godot 作为游戏引擎?</strong>
+**为什么选择 Godot 作为游戏引擎?**
 
 在众多游戏引擎中，我们选择 Godot 4.5 作为前端引擎，主要基于以下几个考虑：
 
 （1）Godot 在 2D 游戏开发上有着天然的优势</strong>。赛博小镇是一个俯视角的 2D 像素风格游戏，Godot 的 2D 引擎非常成熟，提供了 TileMap、AnimatedSprite2D、CharacterBody2D 等专门为 2D 游戏设计的节点类型，开发效率远高于 Unity 等引擎。Godot 的场景系统(Scene System)让我们可以将玩家、NPC、UI 等元素封装成独立的场景，然后在主场景中实例化，这种组件化的设计非常适合我们的需求。
 
-（2）<strong>Godot 是完全开源且免费的</strong>。Godot 使用 MIT 许可证，没有任何版权费用或收入分成，这对于教学项目和开源项目非常友好。你可以自由地修改引擎源码，也可以将游戏商业化而不用担心授权问题。相比之下，Unity 虽然功能强大，但在 2024 年引入了运行时费用政策，引发了开发者社区的广泛争议。
+（2）**Godot 是完全开源且免费的**。Godot 使用 MIT 许可证，没有任何版权费用或收入分成，这对于教学项目和开源项目非常友好。你可以自由地修改引擎源码，也可以将游戏商业化而不用担心授权问题。相比之下，Unity 虽然功能强大，但在 2024 年引入了运行时费用政策，引发了开发者社区的广泛争议。
 
-（3）<strong>Godot 的学习成本极低</strong>。Godot 使用 GDScript 作为主要脚本语言，这是一种类似 Python 的动态类型语言，语法简洁易懂，学习曲线非常平缓。对于已经熟悉 Python 的读者来说，学习 GDScript 几乎没有门槛——变量声明、函数定义、控制流程等语法都与 Python 高度相似，你甚至可以在几小时内就上手编写游戏脚本。Godot 的节点树结构也非常直观，你可以在编辑器中直观地看到场景的层级关系，这对于初学者非常友好。
+（3）**Godot 的学习成本极低**。Godot 使用 GDScript 作为主要脚本语言，这是一种类似 Python 的动态类型语言，语法简洁易懂，学习曲线非常平缓。对于已经熟悉 Python 的读者来说，学习 GDScript 几乎没有门槛——变量声明、函数定义、控制流程等语法都与 Python 高度相似，你甚至可以在几小时内就上手编写游戏脚本。Godot 的节点树结构也非常直观，你可以在编辑器中直观地看到场景的层级关系，这对于初学者非常友好。
 
-（4）<strong>Godot 与 Python 后端的集成非常简单</strong>。Godot 内置了 HTTPRequest 节点，可以轻松地与 FastAPI 后端进行 HTTP 通信。我们只需要创建一个 API 客户端脚本，封装所有的 API 调用，就可以在游戏中调用后端的 AI 能力。这种前后端分离的架构让我们可以独立开发和测试游戏逻辑和 AI 逻辑，大大提高了开发效率。
+（4）**Godot 与 Python 后端的集成非常简单**。Godot 内置了 HTTPRequest 节点，可以轻松地与 FastAPI 后端进行 HTTP 通信。我们只需要创建一个 API 客户端脚本，封装所有的 API 调用，就可以在游戏中调用后端的 AI 能力。这种前后端分离的架构让我们可以独立开发和测试游戏逻辑和 AI 逻辑，大大提高了开发效率。
 
 当然，Godot 也有一些局限性。比如，Godot 的 3D 能力相比 Unreal Engine 和 Unity 还有差距，如果你要开发大型 3D 游戏，可能需要考虑其他引擎。但对于 2D 游戏、独立游戏和教学项目，Godot 是一个非常优秀的选择。
 
@@ -1066,19 +1066,19 @@ Player (CharacterBody2D)  ← 根节点,负责物理移动
 
 
 
-这个图展示了四个独立的场景及其内部结构。<strong>场景 1(Main)</strong>是主场景，它包含了背景图片(Sprite2D)、玩家实例、NPCs 组织节点(下面有三个 NPC 实例)、对话界面实例、墙体组织节点和背景音乐。注意，这里的 Player、NPC_Zhang、NPC_Li、NPC_Wang 和 DialogueUI 都是场景实例，不是普通节点。<strong>场景 2(Player)</strong>定义了玩家角色的结构，包含动画、碰撞、摄像机和两个音效节点。<strong>场景 3(NPC)</strong>是一个通用模板，张三、李四、王五都是这个场景的实例，包含碰撞、动画、交互区域和两个标签。<strong>场景 4(DialogueUI)</strong>是一个 CanvasLayer 节点，包含 Panel 和各种 UI 元素。
+这个图展示了四个独立的场景及其内部结构。**场景 1(Main)**是主场景，它包含了背景图片(Sprite2D)、玩家实例、NPCs 组织节点(下面有三个 NPC 实例)、对话界面实例、墙体组织节点和背景音乐。注意，这里的 Player、NPC_Zhang、NPC_Li、NPC_Wang 和 DialogueUI 都是场景实例，不是普通节点。**场景 2(Player)**定义了玩家角色的结构，包含动画、碰撞、摄像机和两个音效节点。**场景 3(NPC)**是一个通用模板，张三、李四、王五都是这个场景的实例，包含碰撞、动画、交互区域和两个标签。**场景 4(DialogueUI)**是一个 CanvasLayer 节点，包含 Panel 和各种 UI 元素。
 
 场景实例化的过程可以这样理解：我们在 Godot 编辑器中创建了 NPC.tscn 这个场景文件，定义了 NPC 的节点结构。然后在 Main 场景中，我们三次"实例化"这个 NPC 场景，创建了三个独立的副本，分别命名为 NPC_Zhang、NPC_Li 和 NPC_Wang。每个副本都有自己的位置和状态，但它们共享相同的节点结构。如果我们修改 NPC.tscn，比如给 NPC 添加一个新的音效节点，那么所有三个实例都会自动获得这个音效。
 
 在 Godot 中创建这些场景的步骤如下：
 
-1. <strong>创建 Player 场景</strong>：新建场景，选择 CharacterBody2D 作为根节点，添加 AnimatedSprite2D、CollisionShape2D、Camera2D、InteractSound 和 RunningSound 子节点，保存为 Player.tscn。
+1. **创建 Player 场景**：新建场景，选择 CharacterBody2D 作为根节点，添加 AnimatedSprite2D、CollisionShape2D、Camera2D、InteractSound 和 RunningSound 子节点，保存为 Player.tscn。
 
-2. <strong>创建 NPC 场景</strong>：新建场景，选择 CharacterBody2D 作为根节点，添加 CollisionShape2D、AnimatedSprite2D、InteractionArea(Area2D，下面有 CollisionShape2D)、NameLabel 和 DialogueLabel 子节点，保存为 NPC.tscn。
+2. **创建 NPC 场景**：新建场景，选择 CharacterBody2D 作为根节点，添加 CollisionShape2D、AnimatedSprite2D、InteractionArea(Area2D，下面有 CollisionShape2D)、NameLabel 和 DialogueLabel 子节点，保存为 NPC.tscn。
 
-3. <strong>创建 DialogueUI 场景</strong>：新建场景，选择 CanvasLayer 作为根节点，添加 Panel 子节点，在 Panel 下添加 NPCName、NPCTitle、DialogueText(RichTextLabel)、PlayerInput(LineEdit)、SendButton 和 CloseButton，保存为 DialogueUI.tscn。
+3. **创建 DialogueUI 场景**：新建场景，选择 CanvasLayer 作为根节点，添加 Panel 子节点，在 Panel 下添加 NPCName、NPCTitle、DialogueText(RichTextLabel)、PlayerInput(LineEdit)、SendButton 和 CloseButton，保存为 DialogueUI.tscn。
 
-4. <strong>创建 Main 场景</strong>：新建场景，选择 Node2D 作为根节点，添加 Background(Sprite2D)作为背景图，在 Background 下添加小鲸鱼装饰，然后实例化 Player 场景，创建 NPCs 节点并在其下三次实例化 NPC 场景，实例化 DialogueUI 场景，创建 Walls 节点用于组织墙体碰撞，最后添加 AudioStreamPlayer 播放背景音乐。
+4. **创建 Main 场景**：新建场景，选择 Node2D 作为根节点，添加 Background(Sprite2D)作为背景图，在 Background 下添加小鲸鱼装饰，然后实例化 Player 场景，创建 NPCs 节点并在其下三次实例化 NPC 场景，实例化 DialogueUI 场景，创建 Walls 节点用于组织墙体碰撞，最后添加 AudioStreamPlayer 播放背景音乐。
 
 这种场景组织方式的优势在于：每个场景都是独立的，可以单独测试;NPC 使用同一个场景的实例，修改一次就能影响所有 NPC;场景之间通过信号通信，耦合度低，易于维护和扩展。
 
@@ -1842,23 +1842,23 @@ func get_npc_node(npc_name: String) -> Node2D:
 
 在本章中，我们完成了一个完整的 AI 小镇项目——赛博小镇。这个项目将 HelloAgents 框架与 Godot 游戏引擎结合，创造出了一个充满生命力的虚拟世界。让我们回顾一下我们学到的核心内容。
 
-<strong>技术架构设计</strong>
+**技术架构设计**
 
 我们采用了游戏引擎+后端服务的分离架构，将前端渲染、后端逻辑和 AI 智能分离到不同的层次。Godot 负责游戏画面和玩家交互，FastAPI 负责 API 服务和状态管理，HelloAgents 负责 NPC 智能和记忆系统。这种分层设计让每个部分都可以独立开发和测试，也为后续的扩展提供了良好的基础。
 
-<strong>NPC 智能体系统</strong>
+**NPC 智能体系统**
 
 我们使用 HelloAgents 的 SimpleAgent 为每个 NPC 创建了独立的智能体。每个 NPC 都有自己的角色设定、性格特点和记忆系统。通过精心设计的系统提示词，我们让张三成为了一位严谨的 Python 工程师，李四成为了一位善于沟通的产品经理，王五成为了一位富有创意的 UI 设计师。这些 NPC 不仅能够理解玩家的对话，还能根据自己的角色特点做出相应的回复。
 
-<strong>记忆与好感度系统</strong>
+**记忆与好感度系统**
 
 我们实现了两层记忆系统：短期记忆保持对话的连贯性，长期记忆存储所有的互动历史。通过向量数据库的语义检索，NPC 可以回忆起之前讨论过的话题。好感度系统让 NPC 对玩家的态度随着互动而变化，从陌生到挚友，每个等级都有不同的行为表现。这些设计让 NPC 显得更加真实和有趣。
 
-<strong>游戏场景构建</strong>
+**游戏场景构建**
 
 我们使用 Godot 创建了一个像素风格的办公室场景，实现了玩家控制、NPC 游走、交互检测和对话 UI。通过场景系统的模块化设计，我们可以轻松地添加新的 NPC、新的场景和新的功能。GDScript 的简洁语法让游戏逻辑的实现变得直观和高效。
 
-<strong>前后端通信</strong>
+**前后端通信**
 
 我们使用 HTTP REST API 实现了 Godot 前端与 FastAPI 后端的通信。通过异步请求和信号系统，我们保证了游戏的流畅性，即使网络延迟较高也不会影响玩家体验。API 客户端的封装让其他脚本可以方便地调用后端服务，对话 UI 的实现让玩家可以自然地与 NPC 交流。
 
@@ -1875,31 +1875,31 @@ func get_npc_node(npc_name: String) -> Node2D:
 
 赛博小镇只是一个起点，还有很多可以扩展的方向。这些扩展不仅能够增强游戏的趣味性，也能探索 AI 技术在游戏中的更多可能性。
 
-<strong>（1）多人在线支持</strong>
+**（1）多人在线支持**
 
 目前的赛博小镇是单人游戏，但我们可以将其扩展为多人在线游戏。多个玩家可以同时进入同一个办公室，与 NPC 和其他玩家互动。这需要引入 WebSocket 进行实时通信，以及数据库来持久化玩家数据和 NPC 状态。NPC 可以记住与不同玩家的互动，对每个玩家保持独立的好感度。
 
-<strong>（2）任务系统</strong>
+**（2）任务系统**
 
 我们可以为 NPC 设计任务系统。当玩家与 NPC 的好感度达到一定程度时，NPC 会提供特殊任务。比如张三可能会请玩家帮忙调试一段代码，李四可能会请玩家收集用户反馈，王五可能会请玩家评价设计方案。完成任务可以获得奖励，也能进一步提升好感度。
 
-<strong>（3）NPC 之间的互动</strong>
+**（3）NPC 之间的互动**
 
 目前 NPC 只与玩家互动，但我们可以让 NPC 之间也能互动。张三可以和李四讨论产品需求，李四可以和王五讨论界面设计，王五可以和张三讨论技术实现。这些互动可以在后台自动进行，玩家可以观察到 NPC 之间的对话，让整个世界显得更加生动。
 
-<strong>（4）情感系统</strong>
+**（4）情感系统**
 
 除了好感度，我们还可以为 NPC 添加更复杂的情感系统。NPC 可以有开心、难过、生气、兴奋等不同的情绪状态，这些情绪会影响 NPC 的回复风格和行为。比如当 NPC 心情好的时候，会更愿意分享信息;当 NPC 心情不好的时候，可能会比较冷淡。
 
-<strong>（5）动态事件系统</strong>
+**（5）动态事件系统**
 
 我们可以设计一些动态事件，让游戏世界更加丰富。比如定期举办团队会议，所有 NPC 和玩家聚在一起讨论项目进展;或者举办生日派对，庆祝某个 NPC 的生日;或者突发紧急任务，需要大家协作完成。这些事件可以增加游戏的变化性和趣味性。
 
-<strong>（6）更大的世界</strong>
+**（6）更大的世界**
 
 目前的赛博小镇只有一个办公室场景，但我们可以扩展到更大的世界。可以添加咖啡厅、图书馆、公园等不同的场景，每个场景有不同的 NPC 和互动方式。玩家可以在不同场景之间移动，探索更广阔的虚拟世界。
 
-<strong>（7）个性化学习</strong>
+**（7）个性化学习**
 
 NPC 可以学习每个玩家的偏好和习惯。比如如果玩家经常和张三讨论 Python，NPC 会记住玩家对编程感兴趣，以后会主动分享相关的内容。如果玩家喜欢在晚上玩游戏，NPC 会记住这个时间习惯，在晚上更加活跃。
 
